apps/ai-llama/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-server
  namespace: ai-kelbaz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama-server
  template:
    metadata:
      labels:
        app: llama-server
    spec:
      containers:
        - name: llama-cpp
          image: ghcr.io/ggml-org/llama.cpp:server
          args:
            - "-hf"
            - "unsloth/gemma-4-E2B-it-qat-mobile-GGUF"
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "8080"
            - "-c"
            - "2048" # Taille du contexte, on reste chill pour la RAM
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "2Gi"
              cpu: "1000m"
            limits:
              memory: "10Gi" # On lui laisse de la marge sur tes 16Go
              cpu: "4000m"
