apps/ai-llama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-service
  namespace: ai-kelbaz
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: llama-server
